k8s/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sghss-api
  namespace: sghss
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sghss-api
  template:
    metadata:
      labels:
        app: sghss-api
    spec:
      containers:
        - name: sghss-api
          image: registry.poderiaserseudominio.uk/adnangonzaga/sghss-api:${TAG:-latest}
          imagePullPolicy: Always
          ports:
            - containerPort: 80
