k8s/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sghss-api
  namespace: sghss
spec:
  selector:
    app: sghss-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
